@@ -55,6 +55,36 @@ class SubrequestView(BrowserView):
         return response.body
 
 
+class StreamIteratorView(BrowserView):
+
+    def __call__(self):
+        from ZServer.tests.test_responses import test_streamiterator
+        response = self.request.response
+        response.setHeader('content-length', 5)
+        return test_streamiterator()
+
+
+class FileStreamIteratorView(BrowserView):
+
+    def __call__(self):
+        from ZPublisher.Iterators import filestream_iterator
+        from pkg_resources import resource_filename
+        filename = resource_filename('plone.subrequest', 'testfile.txt')
+        return filestream_iterator(filename)
+
+
+class BlobStreamIteratorView(BrowserView):
+
+    def __call__(self):
+        from ZODB.blob import Blob
+        from plone.app.blob.iterators import BlobStreamIterator
+        myblob = Blob()
+        f = myblob.open("w")
+        f.write("Hi, Blob!")
+        f.close()
+        return BlobStreamIterator(myblob)
+
+
 def singleton(cls):
     return cls()
 
