@@ -53,6 +53,27 @@
         permission="zope.Public"
         />
 
+    <browser:page 
+        name="stream"
+        for="*"
+        class="plone.subrequest.testing.StreamIteratorView"
+        permission="zope.Public"
+        />
+
+    <browser:page 
+        name="filestream"
+        for="*"
+        class="plone.subrequest.testing.FileStreamIteratorView"
+        permission="zope.Public"
+        />
+
+    <browser:page 
+        name="blobstream"
+        for="*"
+        class="plone.subrequest.testing.BlobStreamIteratorView"
+        permission="zope.Public"
+        />
+
     <browser:defaultView
         for="OFS.Folder.Folder"
         name="test"
